@@ -25219,14 +25219,58 @@ adder 1 2 3
 
 @noindent
 This defines the command @code{adder}, which prints the sum of
-its three arguments.  Note the arguments are text substitutions, so they may
-reference variables, use complex expressions, or even perform inferior
-functions calls.
+its three arguments.
+
+The arguments to user-defined commands are text substitutions, so they
+may reference variables, use complex expressions, or even perform
+inferior functions calls.  Each argument is separated with whitespace,
+so in the previous example three arguments were passed.  The following
+example also passes three arguments, though the arguments are more
+complex:
+
+@smallexample
+adder 10+1 10+2 10+3
+@end smallexample
+
+@noindent
+However, if whitespace were added around the @code{+} characters, then
+9 arguments would be passed, @code{adder} only uses the first 3 of
+these arguments, and the others would be silently ignored:
+
+@smallexample
+adder 10 + 1 10 + 2 10 + 3
+@end smallexample
+
+@noindent
+Parenthesis can be uses to group complex expressions that include
+whitespace into a single argument, so the previous example can be
+modified to pass just 3 arguments again, like this:
+
+@smallexample
+adder (10 + 1) (10 + 2) (10 + 3)
+@end smallexample
+
+@noindent
+The parenthesis are passed through as part of the argument, so the
+previous example causes @value{GDBN} to evaluate:
+
+@smallexample
+print (10 + 1) + (10 + 2) + (10 + 3)
+@end smallexample
+
+@noindent
+Nested parenthesis are also allowed within an argument, in the
+following example 3 arguments are still passed:
+
+@smallexample
+adder (10 + 1) (10 + (1 + 1)) (10 + (1 + (1 + 1)))
+@end smallexample
 
 @cindex argument count in user-defined commands
 @cindex how many arguments (user-defined commands)
-In addition, @code{$argc} may be used to find out how many arguments have
-been passed.
+@noindent
+Within a user-defined command @code{$argc} may be used to find out how
+many arguments have been passed.
 
 @smallexample
 define adder
