@@ -1,3 +1,8 @@
+2018-08-15  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gdb.texinfo (Define): Additional documentation about argument
+	syntax.
+
 2018-08-14  Jan Vrany  <jan.vrany@fit.cvut.cz>
 
 	* gdb.texinfo (GDB/MI Data Manipulation): Document
